deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-workflows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-workflows
  template:
    metadata:
      labels:
        app: simple-workflows
    spec:
      serviceAccountName: simple-workflows
      containers:
        - name: simple-workflows
          image: simple-workflows:latest
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9090
