deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-workflows
  labels:
    app: simple-workflows
spec:
  selector:
    app: simple-workflows
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
