deploy/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-workflows
spec:
  parentRefs:
    - name: placeholder-gateway
  rules:
    - backendRefs:
        - name: simple-workflows
          port: 8080
